[Feat] #50 - Config 내용 및 Info 추가

--- a/TOASTER-iOS/Global/Supporting Files/Info.plist
+++ b/TOASTER-iOS/Global/Supporting Files/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ACCESS_TOKEN_KEY</key>
+	<string>$(ACCESS_TOKEN_KEY)</string>
+	<key>APPLE_LOGIN</key>
+	<string>$(APPLE_LOGIN)</string>
 	<key>BASE_URL</key>
 	<string>$(BASE_URL)</string>
 	<key>CFBundleURLTypes</key>
@@ -15,8 +19,12 @@
 			</array>
 		</dict>
 	</array>
+	<key>KAKAO_LOGIN</key>
+	<string>$(KAKAO_LOGIN)</string>
 	<key>KakaoNativeAppKey</key>
 	<string>$(KAKAO_NATIVE_APP_KEY)</string>
+	<key>LOGIN_TYPE</key>
+	<string>$(LOGIN_TYPE)</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>kakaokompassauth</string>
@@ -27,6 +35,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>REFRESH_TOKEN_KEY</key>
+	<string>$(REFRESH_TOKEN_KEY)</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>SUIT-ExtraBold.otf</string>
