--- a/TOASTER-iOS/Global/Supporting Files/Info.plist
+++ b/TOASTER-iOS/Global/Supporting Files/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleDisplayName</key>
+	<string>TOASTER</string>
 	<key>FCM_TOKEN_KEY</key>
 	<string>$(FCM_TOKEN_KEY)</string>
 	<key>ACCESS_TOKEN_KEY</key>
