[Feat] #178 - Share Extension 초기 세팅 및 네트워크 연결

--- a/ToasterShareExtension/ToasterShareExtension.entitlements
+++ b/ToasterShareExtension/ToasterShareExtension.entitlements
@@ -6,5 +6,9 @@
 	<array>
 		<string>group.TeamLinkMIND.TOASTER-iOS</string>
 	</array>
+	<key>keychain-access-groups</key>
+	<array>
+		<string>$(AppIdentifierPrefix)group.TeamLinkMIND.TOASTER-iOS.KeyChain</string>
+	</array>
 </dict>
 </plist>
