[Fix] #178 - 전체 클립 이미지 수정 및 Cell 재사용 이슈 제거

--- a/TOASTER-iOS/Global/Supporting Files/Info.plist
+++ b/TOASTER-iOS/Global/Supporting Files/Info.plist
@@ -20,6 +20,16 @@
 				<string>kakao$(KAKAO_NATIVE_APP_KEY)</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>TeamLinkMIND.TOASTER-iOS</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>TOASTER</string>
+			</array>
+		</dict>
 	</array>
 	<key>FCM_TOKEN_KEY</key>
 	<string>$(FCM_TOKEN_KEY)</string>
