--- a/TOASTER-iOS/TOASTER-iOS.entitlements
+++ b/TOASTER-iOS/TOASTER-iOS.entitlements
@@ -9,9 +9,7 @@
 		<string>Default</string>
 	</array>
 	<key>com.apple.security.application-groups</key>
-	<array>
-		<string>group.TeamLinkMIND.TOASTER-iOS</string>
-	</array>
+	<array/>
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)group.TeamLinkMIND.TOASTER-iOS.KeyChain</string>
